k8s-gcp/service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rest-service
spec:
  type: NodePort
  selector:
    app: hello-rest-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
