k8s-gcp/service_np.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rest-service
  annotations: 
    cloud.google.com/backend-config: '{"default": "hello-rest-backend-config"}'
    #cloud.google.com/backend-config: '{"/hello": "hello-rest-backend-config"}'
spec:
  type: NodePort
  selector:
    app: hello-rest-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
