k8s-gcp/ingress_rust_only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-rest-service
            port:
              number: 8080
